web/css/homepage.css
/*CAROUSEL*/
.carousel-inner > .item > img,
.carousel-inner > .item > a > img {
    width: 600px;
    margin: auto;
    height: 450px;
    max-height: 450px;
}
/*WELCOME*/
.container {
    padding: 80px 100px;
}
.person {
    border: 10px solid transparent;
    margin-bottom: 25px;
}
.person:hover {
    border-color: #f1f1f1;
}
/* Black buttons with extra padding and without rounded borders */
.btn {
    padding: 18px 20px;
    background-color: #2d2d30;
    color: #f1f1f1;
    border-radius: 4px;
    transition: .2s;
    margin-bottom: 1px;
    border-color: #f1f1f1;
}
/* On hover, the color of .btn will transition to white with black text */
.btn:hover, .btn:focus {
    border: 1px solid #333;
    background-color: #fff;
    color: #000;
}
/* Add a dark background color with a little bit see-through */
.navbar {
    margin-bottom: 0;
    background-color: #2d2d30;
    font-size: 14px !important;
    letter-spacing: 4px;
    opacity:1;
}

.navbar li a, .navbar .navbar-brand {
    color: #d5d5d5 !important;
}
.navbar-nav li a:hover {
    color: #fff !important;
}
.navbar-nav li.active a {
    color: #fff !important;
    background-color: #29292c !important;
}
.navbar-default .navbar-toggle {
    border-color: transparent;
}

.open .dropdown-toggle {
    color: #fff ;
    background-color: #555 !important;
}

/* Drop down button for categories */
button.btn.btn-primary.dropdown-toggle {
    position: absolute;
    margin-left: -4.8%;
    border-color: #f1f1f1;
}

/* Dropdown links */
.dropdown-menu li a {
    color: #000 !important;
}

/* On hover, the dropdown links will turn red */
.dropdown-menu li a:hover {
    background-color: red !important;
}

/* Sidebar */
.open .sidebar-toggle {
    color: #fff ;
    background-color: #555 !important;
}


/* sidebar links */
.sidebar-menu li a {
    color: #000 !important;
}

/* On hover, the sidebar links will turn red */
.sidebar-menu li a:hover {
    background-color: darkgray !important;
}
/*STYLE*/
body {
    font: 400 15px/1.8 Lato, sans-serif;
    color: #777;
}

.navbar {
    font-family: Montserrat, sans-serif;
}
/* Overwrite default styles of h3 and h4 */
h3, h4 {
    margin: 10px 0 30px 0;
    letter-spacing: 10px;
    font-size: 20px;
    color: #111;
    text-align: center;
    font-effect: fire;
}
h3.w3-bar-item {
    margin: 5px 0 10px 0;
    letter-spacing: 7px;
    font-size: 15px;
    color: #111;
}

/* Remove rounded borders on input fields */
.form-control {
    border-radius: 0;
    width: auto;
    position: absolute;
}

/* Disable the ability to resize textareas */
textarea {
    resize: none;
}

/* Slide animation */
.slideanim {visibility:hidden;}
.slide {
    animation-name: slide;
    -webkit-animation-name: slide;
    animation-duration: 1s;
    -webkit-animation-duration: 1s;
    visibility: visible;
}
@keyframes slide {
    0% {
        opacity: 0;
        -webkit-transform: translateY(70%);
    }
    100% {
        opacity: 1;
        -webkit-transform: translateY(0%);
    }
}
@-webkit-keyframes slide {
    0% {
        opacity: 0;
        -webkit-transform: translateY(70%);
    }
    100% {
        opacity: 1;
        -webkit-transform: translateY(0%);
    }
}
/*SEARCH BAR*/
form.searchbar input[type=text] {
    width: 200px;
    box-sizing: content-box;
    border: 1px solid #ccc;
    border-radius: 4px;
    font-size: 16px;
    background-color: white;
    padding: 12px 15px 12px 15px;
    -webkit-transition: width 0.4s ease-in-out;
    transition: width 0.4s ease-in-out;
}

form.searchbar input[type=text]:focus {
    width: 50%;
}

form.searchbar {
    text-align: center;
}

footer {
    font-size: 0.80em;
    margin-left: 17%;
    text-align: center;
    clear: both;
    padding-top: 90px;
    color: #ccc;
}

